[package]
name = "chinaroutes"
version = "0.1.2"
authors = ["PerfectLaugh <denniswu81229@gmail.com>"]
description = "Add country routes for linux routing table"
license = "MIT"
build = "build.rs"

[dependencies]
regex = "0.2"
clap = "2.24.2"
libc = "0.2"

[build-dependencies]
gcc = "0.3"
pkg-config = "0.3.9"
